--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.1",
     "nprogress": "^0.2.0",
     "vue": "^2.5.2",
